Fixed csrf check in default search form.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@178 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/search_box.html
+++ b/core/templates/search_box.html
@@ -2,6 +2,7 @@
 
 <div class="search_box">
     <form action="." method="post">
+        {% csrf_token %}
         <input type="text" name="query"/>
         <input type="submit" name="search" class="search" value="{% trans 'Search' %}"/>
     </form>
